# memoria-viva-attention-graph

./: .env.example  .gitignore  AGENTS.md  BUILD_LOG.md  BUILD_WEEK_BASELINE.md  DECISIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
config/: attention-feature-policy.v1.json  attention-policy.v1.json
docs/: CHAT_INTERFACE_V1.md  CONSTRUCTION_BLUEPRINT.md  ontology.md  privacy.md
docs/hackathon/: FINAL_COMPLIANCE_REVIEW.md  REQUIREMENTS_MATRIX.md  RULES_BASELINE.md  RULE_CHANGELOG.md  SUBMISSION_CHECKLIST.md
fixtures/founder-hackathon/: README.md  calendar-t0.json  constraints.json  evidence.json  expected-graph-delta.json  expected-ranking-after.json  openai-event.json  (+5 more)
schemas/: attention-feature-policy.schema.json  attention-item.schema.json  attention-policy.schema.json  attention-ranking.schema.json  chat-response.schema.json  commitment.schema.json  common.schema.json  constraint.schema.json  decision-brief.schema.json  evidence.schema.json  expected-attention-ranking.schema.json  goal.schema.json  graph-delta.schema.json  privacy-manifest.schema.json  public-goal-set.schema.json  run-record.schema.json  snapshot.schema.json  source-event.schema.json  source.schema.json
tests/: test_attention.py  test_canonical.py  test_chat.py  test_chat_explainer.py  test_cli.py  test_contracts.py  test_explainer.py  test_fixture_bundle.py  test_graph_delta.py  test_oracle_ranking.py  test_presentation.py  test_replay.py  test_run_record.py  test_snapshot_t0.py  test_streamlit_app.py  test_transition_t1.py
(+16 files in other folders)
