[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memoria-viva-attention-graph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["jsonschema==4.26.0"]

[project.optional-dependencies]
demo = [
  "graphviz==0.21",
  "openai==2.46.0",
  "python-dotenv==1.2.2",
  "streamlit==1.54.0",
]

[tool.setuptools.packages.find]
where = ["src"]
